@@ -16,7 +16,6 @@
 
 #include "mb_objmap.h"
 #include "mb_pooled_list.h"
-#include <errno.h>
 #include <assert.h>
 #include <stdlib.h>
 
